--- a/Languages/Russian/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
+++ b/Languages/Russian/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
@@ -20,5 +20,7 @@
 	<AE_EntityCodexEntry_StudyNotepad.label>жёлтый блокнот</AE_EntityCodexEntry_StudyNotepad.label>
 	
 	<AE_EntityCodexEntry_ProviderScripture.label>древнее писание</AE_EntityCodexEntry_ProviderScripture.label>
+	
+	<AE_EntityCodexEntry_ChristmasStockings.label>красный носок</AE_EntityCodexEntry_ChristmasStockings.label>
 
 </LanguageData>
