--- a/Languages/Russian/DefInjected/ThoughtDef/Thoughts_Memory_Misc.xml
+++ b/Languages/Russian/DefInjected/ThoughtDef/Thoughts_Memory_Misc.xml
@@ -10,5 +10,10 @@
 	
 	<Thought_AEFleshmassLung.stages.0.label>Стимуляция легких из биомассы</Thought_AEFleshmassLung.stages.0.label>
 	<Thought_AEFleshmassLung.stages.0.description>Чувство легкости в голове. Какое приятное ощущение.</Thought_AEFleshmassLung.stages.0.description>
+	
+	<Thought_AEChristmasCandyCane.stages.got_candy_cane.label>получил леденцовую трость</Thought_AEChristmasCandyCane.stages.got_candy_cane.label>
+	<Thought_AEChristmasCandyCane.stages.got_candy_cane.description>Волна сладкого ожидания захлестнула их, улыбка расплылась по их лицам, когда они развернули ярко-красную и белую леденцовую трость.</Thought_AEChristmasCandyCane.stages.got_candy_cane.description>
+	<Thought_AEChristmasCoal.stages.got_lump_of_coal.label>получил кусок угля</Thought_AEChristmasCoal.stages.got_lump_of_coal.label>
+	<Thought_AEChristmasCoal.stages.got_lump_of_coal.description>Разочарование накрыло их волной, когда они вытащили кусок угля, и на мгновение их настроение омрачилось чувством стыда.</Thought_AEChristmasCoal.stages.got_lump_of_coal.description>
   
 </LanguageData>
