BLake balance settings added FFruit respawn time decreased

--- a/Languages/English/Keyed/Mod.xml
+++ b/Languages/English/Keyed/Mod.xml
@@ -10,6 +10,8 @@
 	<AnomaliesExpected.Settings.BeamTarget.BeamTargetLetter>Will get letter instead of message, when Transmitter leaving containment</AnomaliesExpected.Settings.BeamTarget.BeamTargetLetter>
 	
 	<AnomaliesExpected.Settings.BloodLake.UndergroundFleshmassNestMult>Set multiplier for amount of threat points for fleshbeast generation from nests to {0}</AnomaliesExpected.Settings.BloodLake.UndergroundFleshmassNestMult>
+	<AnomaliesExpected.Settings.BloodLake.UndergroundFleshmassNestFrequencyMult>Set multiplier for time between fleshbeast generation from nests to {0}</AnomaliesExpected.Settings.BloodLake.UndergroundFleshmassNestFrequencyMult>
+	<AnomaliesExpected.Settings.BloodLake.BloodLakeSubMapMaxSize>Set maximum size for Lake sub map generation to {0}x{0} (by default will copy size of colony map)\n(Size affect amount of loot, enemies and required resources from PC)</AnomaliesExpected.Settings.BloodLake.BloodLakeSubMapMaxSize>
 	
 	<AnomaliesExpected.Settings.ResearchTab.Unlock>Try Unlock Anomalies Expected Research Tab</AnomaliesExpected.Settings.ResearchTab.Unlock>
 </LanguageData>
