--- a/Languages/Russian/Keyed/EntityDataBase.xml
+++ b/Languages/Russian/Keyed/EntityDataBase.xml
@@ -5,6 +5,7 @@
 	<AnomaliesExpected.EntityDataBase.Desc>Это список всех известных тварей, имеющих отношение к пустоте. Позволяет просмотреть все полученные исследовательские заметки. Открывайте новых тварей с помощью псионического ритуала воззвания к пустоте.</AnomaliesExpected.EntityDataBase.Desc>
 	<AnomaliesExpected.EntityDataBase.Tip>Посмотрите список всех обнаруженных тёмных феноменов и их исследовательские заметки.</AnomaliesExpected.EntityDataBase.Tip>
 	
+	<AnomaliesExpected.EntityDataBase.ThreatClass>{0}: Класс "{1}"</AnomaliesExpected.EntityDataBase.ThreatClass>
 	<AnomaliesExpected.EntityDataBase.ThreatClass.-1>Неизвестно</AnomaliesExpected.EntityDataBase.ThreatClass.-1>
 	<AnomaliesExpected.EntityDataBase.ThreatClass.0>Безопасность</AnomaliesExpected.EntityDataBase.ThreatClass.0>
 	<AnomaliesExpected.EntityDataBase.ThreatClass.1>Осторожность</AnomaliesExpected.EntityDataBase.ThreatClass.1>
@@ -12,6 +13,7 @@
 	<AnomaliesExpected.EntityDataBase.ThreatClass.3>Опасность</AnomaliesExpected.EntityDataBase.ThreatClass.3>
 	<AnomaliesExpected.EntityDataBase.ThreatClass.4>Критическая</AnomaliesExpected.EntityDataBase.ThreatClass.4>
 	<AnomaliesExpected.EntityDataBase.ThreatClass.5>Апокалипсис</AnomaliesExpected.EntityDataBase.ThreatClass.5>
+	<AnomaliesExpected.EntityDataBase.ThreatClassIncreased>Уровень опасности "{0}" аномалии повышена.</AnomaliesExpected.EntityDataBase.ThreatClassIncreased>
 	
 	<AnomaliesExpected.EntityDataBase.SortType>Сортировать по: {0}</AnomaliesExpected.EntityDataBase.SortType>
 	<AnomaliesExpected.EntityDataBase.SortType.0>Категория знаний</AnomaliesExpected.EntityDataBase.SortType.0>
