--- a/Languages/English/Keyed/EntityDataBase.xml
+++ b/Languages/English/Keyed/EntityDataBase.xml
@@ -15,9 +15,10 @@
 	<AnomaliesExpected.EntityDataBase.ThreatClass.5>Apocalypse</AnomaliesExpected.EntityDataBase.ThreatClass.5>
 	<AnomaliesExpected.EntityDataBase.ThreatClassIncreased>Threat level of "{0}" anomaly increased.</AnomaliesExpected.EntityDataBase.ThreatClassIncreased>
 	
-	<AnomaliesExpected.EntityDataBase.SortType>Sort by: {0}</AnomaliesExpected.EntityDataBase.SortType>
-	<AnomaliesExpected.EntityDataBase.SortType.0>Knowledge Category</AnomaliesExpected.EntityDataBase.SortType.0>
-	<AnomaliesExpected.EntityDataBase.SortType.1>Threat Class</AnomaliesExpected.EntityDataBase.SortType.1>
-	<AnomaliesExpected.EntityDataBase.SortType.2>Connected Group</AnomaliesExpected.EntityDataBase.SortType.2>
+	<AnomaliesExpected.EntityDataBase.GroupType>Group by: {0}</AnomaliesExpected.EntityDataBase.GroupType>
+	<AnomaliesExpected.EntityDataBase.GroupType.0>Knowledge Category</AnomaliesExpected.EntityDataBase.GroupType.0>
+	<AnomaliesExpected.EntityDataBase.GroupType.1>Threat Class</AnomaliesExpected.EntityDataBase.GroupType.1>
+	<AnomaliesExpected.EntityDataBase.GroupType.2>Connected Group</AnomaliesExpected.EntityDataBase.GroupType.2>
+	<AnomaliesExpected.EntityDataBase.GroupType.3>Mod</AnomaliesExpected.EntityDataBase.GroupType.3>
 	
 </LanguageData>
