--- a/Languages/English/Keyed/EntityDataBase.xml
+++ b/Languages/English/Keyed/EntityDataBase.xml
@@ -4,6 +4,7 @@
 	<AnomaliesExpected.EntityDataBase.Label>Entity Database</AnomaliesExpected.EntityDataBase.Label>
 	<AnomaliesExpected.EntityDataBase.Desc>This page lists all known entities which are related to the dark void. You can review all unlocked study notes. Discover new entities using the “void provocation” psychic ritual.</AnomaliesExpected.EntityDataBase.Desc>
 	<AnomaliesExpected.EntityDataBase.Tip>View all discovered entities and their study notes.</AnomaliesExpected.EntityDataBase.Tip>
+	<AnomaliesExpected.EntityDataBase.AmountStudied>Amount studied: {0}</AnomaliesExpected.EntityDataBase.AmountStudied>
 	<AnomaliesExpected.EntityDataBase.View>View entity database</AnomaliesExpected.EntityDataBase.View>
 	
 	<AnomaliesExpected.EntityDataBase.ThreatClass>{0}: Class {1}</AnomaliesExpected.EntityDataBase.ThreatClass>
