--- a/Languages/Russian/Keyed/EntityDataBase.xml
+++ b/Languages/Russian/Keyed/EntityDataBase.xml
@@ -2,9 +2,13 @@
 <LanguageData>
 	
 	<AnomaliesExpected.EntityDataBase.Label>База данных тёмных феноменов</AnomaliesExpected.EntityDataBase.Label>
-	<AnomaliesExpected.EntityDataBase.Desc>Это список всех известных тварей, имеющих отношение к пустоте. Позволяет просмотреть все полученные исследовательские заметки. Открывайте новых тварей с помощью псионического ритуала воззвания к пустоте.</AnomaliesExpected.EntityDataBase.Desc>
-	<AnomaliesExpected.EntityDataBase.Tip>Посмотрите список всех обнаруженных тёмных феноменов и их исследовательские заметки.</AnomaliesExpected.EntityDataBase.Tip>
+	<AnomaliesExpected.EntityDataBase.Desc>Это список всех известных тварей, имеющих отношение к пустоте. Позволяет просмотреть все полученные отчеты об исследованиях. Открывайте новых тварей с помощью псионического ритуала воззвания к пустоте.</AnomaliesExpected.EntityDataBase.Desc>
+	<AnomaliesExpected.EntityDataBase.Tip>Посмотрите список всех обнаруженных тёмных феноменов и их отчеты об исследованиях.</AnomaliesExpected.EntityDataBase.Tip>
 	<AnomaliesExpected.EntityDataBase.AmountStudied>Количество изучено: {0}</AnomaliesExpected.EntityDataBase.AmountStudied>
+	<AnomaliesExpected.EntityDataBase.AnalyzableThings>Полученные исследовательские заметки:</AnomaliesExpected.EntityDataBase.AnalyzableThings>
+	<AnomaliesExpected.EntityDataBase.ResearchNote.Missing.Tip>{0} была потеряна.\n[Нажмите, чтобы создать копию.]</AnomaliesExpected.EntityDataBase.ResearchNote.Missing.Tip>
+	<AnomaliesExpected.EntityDataBase.ResearchNote.Exist.Tip>{0} уже существует на карте.\n[Нажмите, чтобы найти.]</AnomaliesExpected.EntityDataBase.ResearchNote.Exist.Tip>
+	<AnomaliesExpected.EntityDataBase.ResearchNote.Studied.Tip>{0} полностью изучена.</AnomaliesExpected.EntityDataBase.ResearchNote.Studied.Tip>
 	<AnomaliesExpected.EntityDataBase.View>Открыть базу данных тёмных феноменов</AnomaliesExpected.EntityDataBase.View>
 	
 	<AnomaliesExpected.EntityDataBase.ThreatClass>{0}: Класс "{1}"</AnomaliesExpected.EntityDataBase.ThreatClass>
